<resources>
    <string name="app_name">BookkyAndroid</string>
    <string name="suggestion_title">추천받개</string>
    <string name="search_title">검색</string>
    <string name="myInfo_title">내 정보</string>
    <string name="community_title">커뮤니티</string>
    <string name="home_title">홈</string>
    <string name="myInfo_string1">님, 반가워요!</string>
    <string name="myInfo_string2">관심분야</string>
    <string name="myInfo_string3">관심 도서</string>
    <string name="myInfo_string4">내가 작성한 게시글</string>
    <string name="myInfo_string5">내가 작성한 후기</string>
    <string name="view_more">더 보기</string>
    <string name="reset">재설정하기</string>
    <string name="recommend_Button_string">당신의 책을 🔍찾아보세요!</string>
    <string name="roadmap_Button_string">나의 🛣개발 지도는?</string>
    <string name="home_more_tag">태그 더 보기 ></string>
    <string name="home_community_string">커뮤니티 ></string>
    <string name="home_recommend_string">추천하개 ></string>
    <string name="home_recommendSub_string">당신에게 적합한 책을 찾아줄게요!</string>
    <string name="login_email_string">이메일</string>
    <string name="login_password_string">비밀번호</string>
    <string name="login_button_string">로그인</string>
    <string name="login_social_string">간편 로그인</string>
    <string name="login_signup_string">회원가입</string>
    <string name="login_pwMissing_string">로그인에 문제가 있나요?</string>
    <string name="login_emailHint_string">email@domain.com</string>
    <string name="login_passwordHint_string">********</string>
    <string name="signup_emailValid_string">인증번호 확인</string>
    <string name="signup_passwordValid_string">비밀번호 확인</string>
    <string name="signup_nickname_string">닉네임</string>
    <string name="additional_title_string">추가정보 입력</string>
    <string name="findpw_title_string">비밀번호 찾기</string>
    <string name="findpw_button1_string">인증번호 요청</string>
    <string name="findpw_button2_string">인증번호 확인</string>
    <string name="findpw_button3_string">다음으로</string>
    <string name="findpw_title2_string">인증번호</string>
    <string name="findpw_newpw_title_string">새로운 비밀번호</string>
    <string name="findpw_newpw_title2_string">새로운 비밀번호 확인</string>
    <string name="findpw_newpw_button_string">비밀번호 변경하기</string>
    <string name="backButton_string">&lt;</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="survey_next_string">다음으로</string>
    <string name="survey_mainTitle1_string">개발을</string>
    <string name="survey_mainTitle2_string">해본적이</string>
    <string name="survey_mainTitle3_string">있었나요?</string>
    <string name="survey_subTitle_string">한 가지를 골라주세요.</string>
    <string name="survey_selector1_string">저는 처음입니다.</string>
    <string name="survey_selector2_string">저는 개발자입니다.</string>
    <string name="surveySelector_mainTitle1_string">관심</string>
    <string name="surveySelector_mainTitle2_string">분야를</string>
    <string name="surveySelector_mainTitle3_string">선택하세요</string>
    <string name="book_detail_bookInfo_string">도서정보</string>
    <string name="book_detail_bookPublisher_string">출판사 :</string>
    <string name="book_detail_bookAuthor_string">저자 :</string>
    <string name="book_detail_bookPrice_string">정가 :</string>
    <string name="book_detail_bookPageCnt_string">페이지 :</string>
    <string name="book_detail_bookISBN_string">ISBN :</string>
    <string name="book_detail_bookIntroduction_string">책 소개</string>
    <string name="book_detail_bookMoreText_string">펼쳐보기 ></string>
    <string name="book_detail_bookIndex_string">목차</string>
    <string name="book_detail_bookReviewText_string">리뷰</string>
    <string name="book_detail_bookReviewWrite_string">리뷰 쓰기</string>
    <string name="book_detail_bookLikeText_string">공감</string>

    <string-array name="community_post_list">
        <item>자유게시판</item>
        <item>H🔥T</item>
        <item>Q &amp; A</item>
        <item>책 장터</item>
        <item>내 글 보기</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>