<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_star_24"
        android:enabled="true"
        android:title="@string/home_title" />
    <item
        android:id="@+id/communityFragment"
        android:icon="@drawable/ic_baseline_star_24"
        android:enabled="true"
        android:title="@string/community_title" />
    <item
        android:id="@+id/suggestionFragment"
        android:icon="@drawable/ic_baseline_star_24"
        android:enabled="true"
        android:title="@string/suggestion_title" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_star_24"
        android:enabled="true"
        android:title="@string/search_title" />
    <item
        android:id="@+id/myInfoFragment"
        android:icon="@drawable/ic_baseline_star_24"
        android:enabled="true"
        android:title="@string/myInfo_title" />
</menu>